--- a/tyuiu.isaevma.sprint2.task0.v23.lib/tyuiu.isaevma.sprint2.task0.v23.lib.csproj
+++ b/tyuiu.isaevma.sprint2.task0.v23.lib/tyuiu.isaevma.sprint2.task0.v23.lib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6D48CF6B-AC9A-4AF8-A5D8-74C9697FED54}</ProjectGuid>
+    <ProjectGuid>{3A57F704-E730-43BA-8379-02276A514DB4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>tyuiu.isaevma.sprint2.lib</RootNamespace>
-    <AssemblyName>tyuiu.isaevma.sprint2.lib</AssemblyName>
+    <RootNamespace>tyuiu.isaevma.sprint2.task0.v23.lib</RootNamespace>
+    <AssemblyName>tyuiu.isaevma.sprint2.task0.v23.lib</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
