--- a/Tyuiu.IsaevMA.Sprint2.Task1.V27.Test/Tyuiu.IsaevMa.Sprint2.Task1.V27.Test.csproj
+++ b/Tyuiu.IsaevMA.Sprint2.Task1.V27.Test/Tyuiu.IsaevMa.Sprint2.Task1.V27.Test.csproj
@@ -56,9 +56,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\tyuiu.isaevma.sprint2.task0.v27.lib\tyuiu.isaevma.sprint2.task1.v27.lib.csproj">
+    <ProjectReference Include="..\tyuiu.isaevma.sprint2.task0.v27.lib\Tyuiu.IsaevMa.Sprint2.Task1.V27.Lib.csproj">
       <Project>{57c04660-ccea-4d38-8f3b-36bfb0a207b8}</Project>
-      <Name>tyuiu.isaevma.sprint2.task1.v27.lib</Name>
+      <Name>Tyuiu.IsaevMa.Sprint2.Task1.V27.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
