--- a/Tyuiu.IsaevMA.Sprint2.Task1.V27/Tyuiu.IsaevMa.Sprint2.Task1.V27.csproj
+++ b/Tyuiu.IsaevMA.Sprint2.Task1.V27/Tyuiu.IsaevMa.Sprint2.Task1.V27.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CA5732E4-DB91-4BC3-A1CC-F939A368C980}</ProjectGuid>
+    <ProjectGuid>{C4841D43-EC57-4184-A9A1-E4AA6BE46A01}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <RootNamespace>tyuiu.isaevma.sprint2.task0.v27</RootNamespace>
+    <AssemblyName>tyuiu.isaevma.sprint2.task0.v27</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,6 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\tyuiu.isaevma.sprint2.task0.v27.lib\Tyuiu.IsaevMa.Sprint2.Task1.V27.Lib.csproj">
+      <Project>{57c04660-ccea-4d38-8f3b-36bfb0a207b8}</Project>
+      <Name>Tyuiu.IsaevMa.Sprint2.Task1.V27.Lib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
