--- a/tyuiu.isaevma.sprint2.task0.v23/tyuiu.isaevma.sprint2.task0.v23.csproj
+++ b/tyuiu.isaevma.sprint2.task0.v23/tyuiu.isaevma.sprint2.task0.v23.csproj
@@ -50,9 +50,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\tyuiu.isaevma.sprint2.task0.v23.lib\tyuiu.isaevma.sprint2.task0.v23.lib.csproj">
+    <ProjectReference Include="..\tyuiu.isaevma.sprint2.task0.v23.lib\Tyuiu.IsaevMa.Sprint2.Task0.V23.Lib.csproj">
       <Project>{3a57f704-e730-43ba-8379-02276a514db4}</Project>
-      <Name>tyuiu.isaevma.sprint2.task0.v23.lib</Name>
+      <Name>Tyuiu.IsaevMa.Sprint2.Task0.V23.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
