--- a/tyuiu.isaevma.sprint2.task2.v17.test/tyuiu.isaevma.sprint2.task2.v17.test.csproj
+++ b/tyuiu.isaevma.sprint2.task2.v17.test/tyuiu.isaevma.sprint2.task2.v17.test.csproj
@@ -56,9 +56,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\tyuiu.isaevma.sprint2.task2.v17.lib\tyuiu.isaevma.sprint2.task2.v17.lib.csproj">
+    <ProjectReference Include="..\tyuiu.isaevma.sprint2.task2.v17.lib\Tyuiu.IsaevMa.Sprint2.Task2.V17.Lib.csproj">
       <Project>{433ff905-4feb-4aaa-ac56-5bcc2c618bac}</Project>
-      <Name>tyuiu.isaevma.sprint2.task2.v17.lib</Name>
+      <Name>Tyuiu.IsaevMa.Sprint2.Task2.V17.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
