--- a/tyuiu.isaevma.sprint2.task3.v6/tyuiu.isaevma.sprint2.task3.v6.csproj
+++ b/tyuiu.isaevma.sprint2.task3.v6/tyuiu.isaevma.sprint2.task3.v6.csproj
@@ -50,9 +50,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\tyuiu.isaevma.sprint2.task3.v6.lib\tyuiu.isaevma.sprint2.task3.v6.lib.csproj">
+    <ProjectReference Include="..\tyuiu.isaevma.sprint2.task3.v6.lib\Tyuiu.IsaevMa.Sprint2.Task3.V6.Lib.csproj">
       <Project>{947f52e1-c840-47f1-bd00-502e187ad52e}</Project>
-      <Name>tyuiu.isaevma.sprint2.task3.v6.lib</Name>
+      <Name>Tyuiu.IsaevMa.Sprint2.Task3.V6.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
